--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,7 +9,7 @@
     <body>
         <ul>
             <li><a href="{{ url('all') }}">All users</a></li>
-            <li><a href="{{ url('filter') }}">Filter</a></li>
+            <li>Filter examples: {% for i in range(1, 3) %}<a href="{{ url('filter', {id: i}) }}">{{ i }}</a>, {% endfor %}</li>
         </ul>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
