--- a/app/Resources/views/default/userlist.twig
+++ b/app/Resources/views/default/userlist.twig
@@ -18,6 +18,9 @@
                             <td>{{ user.email }}</td>
                             <td>{{ user.role }}</td>
                             <td>{{ user.regDate|date('Y-m-d') }}</td>
+                            <td>{% for about in user.abouts %}
+                                    <span style="white-space: nowrap;">{{ about.item }}: {{ about.value }}</span>,
+                                {% endfor %}</td>
                         </tr>
                     {% endfor %}
                 </table>
@@ -36,21 +39,12 @@
     a { color: #0000F0; }
     a:hover { text-decoration: none; }
     code { background: #F5F5F5; max-width: 100px; padding: 2px 6px; word-wrap: break-word; }
-    #wrapper { background: #FFF; margin: 1em auto; max-width: 800px; width: 95%; }
+    #wrapper { background: #FFF; margin: 1em auto; width: 95%; }
     #container { padding: 2em; }
     #welcome, #status { margin-bottom: 2em; }
     #welcome h1 span { display: block; font-size: 75%; }
     #icon-status, #icon-book { float: left; height: 64px; margin-right: 1em; margin-top: -4px; width: 64px; }
     #icon-book { display: none; }
 
-    @media (min-width: 768px) {
-        #wrapper { width: 80%; margin: 2em auto; }
-        #icon-book { display: inline-block; }
-        #status a, #next a { display: block; }
-
-        @-webkit-keyframes fade-in { 0% { opacity: 0; } 100% { opacity: 1; } }
-        @keyframes fade-in { 0% { opacity: 0; } 100% { opacity: 1; } }
-        .sf-toolbar { opacity: 0; -webkit-animation: fade-in 1s .2s forwards; animation: fade-in 1s .2s forwards;}
-    }
 </style>
 {% endblock %}
