--- a/app/Resources/views/default/userlist.twig
+++ b/app/Resources/views/default/userlist.twig
@@ -11,6 +11,7 @@
                         <th>Email</th>
                         <th>Role</th>
                         <th>RegDate</th>
+                        <th>Abouts</th>
                     </tr>
                     {% for user in users %}
                         <tr>
